<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_about_us"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background">

    <RelativeLayout
        android:id="@+id/relative_layout_top"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_centerHorizontal="true"
        android:background="@color/color_yellow">

        <ImageView
            android:id="@+id/iv_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="15dp"
            android:src="@mipmap/ic_back" />

        <TextView
            android:id="@+id/tv_title_toolbar"
            style="@style/RobotoMediumFonttype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="About us"
            android:textColor="@color/colorWhite"
            android:textSize="16dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layoutMid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@color/colorWhite"
        android:elevation="5dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:src="@mipmap/app_logo" />

        <TextView
            android:id="@+id/tvCopyright"
            style="@style/RobotoRegularFonttype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/copyright1"
            android:textColor="@color/color_light_black" />

        <TextView
            android:id="@+id/tvVersion"
            style="@style/RobotoRegularFonttype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvCopyright"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="@color/color_tb_click" />

        <TextView
            android:id="@+id/tvAbout"
            style="@style/RobotoLightFonttype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvVersion"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/about1"
            android:textColor="@color/color_light_black" />

        <TextView
            android:id="@+id/tvAboutSite"
            style="@style/RobotoMediumFonttype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvAbout"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/website"
            android:textColor="@color/color_tb_click"
            android:textSize="16dp" />

    </RelativeLayout>

</RelativeLayout>
