<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_more"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background">

    <RelativeLayout
        android:id="@+id/relative_layout_top"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_centerHorizontal="true"
        android:background="@color/color_yellow">

        <TextView
            android:id="@+id/tv_title_toolbar"
            style="@style/RobotoMediumFonttype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="More"
            android:textColor="@color/colorWhite"
            android:textSize="16dp" />

        <ImageView
            android:id="@+id/iv_notifaiction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:padding="10dp"
            android:src="@mipmap/ic_notification_a" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scroll_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative_layout_top"
        android:background="@color/colorWhite"
        android:fillViewport="true"
        android:scrollbars="none">

        <RelativeLayout
            android:id="@+id/relative_layout_mid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <view
                android:id="@+id/view"
                class="android.support.v7.widget.AppCompatTextView"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/color_item_line" />

            <TextView
                android:id="@+id/tvChangePassword"
                style="@style/RobotoRegularFonttype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view"
                android:layout_centerVertical="true"
                android:drawableRight="@mipmap/ic_nextpage_black"
                android:paddingBottom="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="15dp"
                android:text="@string/change_password" />

            <view
                android:id="@+id/view1"
                class="android.support.v7.widget.AppCompatTextView"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@+id/tvChangePassword"
                android:background="@color/color_item_line" />

            <TextView
                android:id="@+id/tvAboutUs"
                style="@style/RobotoRegularFonttype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view1"
                android:layout_centerVertical="true"
                android:drawableRight="@mipmap/ic_nextpage_black"
                android:paddingBottom="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="15dp"
                android:text="@string/about" />

            <view
                android:id="@+id/view2"
                class="android.support.v7.widget.AppCompatTextView"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@+id/tvAboutUs"
                android:background="@color/color_item_line" />

            <TextView
                android:id="@+id/tvFaq"
                style="@style/RobotoRegularFonttype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view2"
                android:layout_centerVertical="true"
                android:drawableRight="@mipmap/ic_nextpage_black"
                android:paddingBottom="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="15dp"
                android:text="@string/faq" />

            <view
                android:id="@+id/view3"
                class="android.support.v7.widget.AppCompatTextView"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@+id/tvFaq"
                android:background="@color/color_item_line" />

            <TextView
                android:id="@+id/tvPrivacyPolicy"
                style="@style/RobotoRegularFonttype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view3"
                android:layout_centerVertical="true"
                android:drawableRight="@mipmap/ic_nextpage_black"
                android:paddingBottom="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="15dp"
                android:text="@string/privacy_policy" />

            <view
                android:id="@+id/view4"
                class="android.support.v7.widget.AppCompatTextView"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@+id/tvPrivacyPolicy"
                android:background="@color/color_item_line" />

            <TextView
                android:id="@+id/tvTAndC"
                style="@style/RobotoRegularFonttype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view4"
                android:layout_centerVertical="true"
                android:drawableRight="@mipmap/ic_nextpage_black"
                android:paddingBottom="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="15dp"
                android:text="@string/t_and_c" />

            <view
                android:id="@+id/view5"
                class="android.support.v7.widget.AppCompatTextView"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@+id/tvTAndC"
                android:background="@color/color_item_line" />

            <TextView
                android:id="@+id/tvContactUs"
                style="@style/RobotoRegularFonttype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view5"
                android:layout_centerVertical="true"
                android:drawableRight="@mipmap/ic_nextpage_black"
                android:paddingBottom="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="15dp"
                android:text="@string/Contact_us" />

            <view
                android:id="@+id/view6"
                class="android.support.v7.widget.AppCompatTextView"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@+id/tvContactUs"
                android:background="@color/color_item_line" />

            <TextView
                android:id="@+id/tvRateUs"
                style="@style/RobotoRegularFonttype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view6"
                android:layout_centerVertical="true"
                android:drawableRight="@mipmap/ic_nextpage_black"
                android:paddingBottom="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="15dp"
                android:text="@string/rate" />

            <view
                android:id="@+id/view7"
                class="android.support.v7.widget.AppCompatTextView"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@+id/tvRateUs"
                android:background="@color/color_item_line" />

            <TextView
                android:id="@+id/tvLogout"
                style="@style/RobotoRegularFonttype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view7"
                android:layout_centerVertical="true"
                android:paddingBottom="15dp"
                android:paddingLeft="10dp"
                android:paddingTop="15dp"
                android:text="@string/logout" />

            <view
                android:id="@+id/view8"
                class="android.support.v7.widget.AppCompatTextView"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@+id/tvLogout"
                android:background="@color/color_item_line" />

        </RelativeLayout>

    </ScrollView>

    <view
        android:id="@+id/view10"
        class="android.support.v7.widget.AppCompatTextView"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_above="@+id/linearLayout"
        android:background="@color/color_tb_line" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorWhite"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layout_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <TextView
                android:id="@+id/home"
                style="@style/RobotoRegularFonttype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:drawablePadding="5dp"
                android:drawableTop="@mipmap/ic_home_black"
                android:gravity="center"
                android:text="Home"
                android:textColor="@color/color_black_dark"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_saved"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/summary"
                style="@style/RobotoRegularFonttype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:drawablePadding="5dp"
                android:drawableTop="@mipmap/ic_saved_black"
                android:gravity="center"
                android:text="Saved"
                android:textColor="@color/color_black_dark"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_following"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/report"
                style="@style/RobotoRegularFonttype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:drawableTop="@mipmap/ic_follow_black"
                android:gravity="center"
                android:text="Following"
                android:textColor="@color/color_black_dark"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_profile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profile"
                style="@style/RobotoRegularFonttype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:drawableTop="@mipmap/ic_profile_black"
                android:gravity="center"
                android:text="Profile"
                android:textColor="@color/color_black_dark"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_more"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/help"
                style="@style/RobotoMediumFonttype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:drawableTop="@mipmap/ic_more_blue"
                android:gravity="center"
                android:text="More"
                android:textColor="@color/color_tb_click"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
